博客前端代码

--- a/zg-blog-front/src/main/resources/static/blog.html
+++ b/zg-blog-front/src/main/resources/static/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Louie - Free Bootstrap 4 Template by Colorlib</title>
+    <title>曾哥技术博客</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -33,27 +33,27 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
-			<h1 id="colorlib-logo"><a href="index.html"><span class="img" style="background-image: url(images/author.jpg);"></span>Louie Smith</a></h1>
+			<h1 id="colorlib-logo"><a href="index.html"><span class="img" style="background-image: url(images/home1.jpg);"></span>曾智奇</a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="collection.html">Collection</a></li>
-					<li><a href="about.html">About Me</a></li>
-					<li><a href="services.html">My Services</a></li>
-					<li class="colorlib-active"><a href="blog.html">Blog</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li class="colorlib-active"><a href="index.html">主页</a></li>
+					<li><a href="collection.html">生活</a></li>
+					<li><a href="about.html">自我介绍</a></li>
+					<li><a href="services.html">好玩的功能</a></li>
+					<li><a href="blog.html">博客</a></li>
+					<li><a href="contact.html">快来联系我</a></li>
 				</ul>
 			</nav>
 
 			<div class="colorlib-footer">
-				<h3>Newsletter</h3>
+				<h3>发邮箱给我吧</h3>
 				<div class="d-flex justify-content-center">
 					<form action="#" class="colorlib-subscribe-form">
-            <div class="form-group d-flex">
-            	<div class="icon"><span class="icon-paper-plane"></span></div>
-              <input type="text" class="form-control" placeholder="Enter Email Address">
-            </div>
-          </form>
+						<div class="form-group d-flex">
+							<div class="icon"><span class="icon-paper-plane"></span></div>
+							<input type="text" class="form-control" placeholder="输入邮箱地址">
+						</div>
+					</form>
 				</div>
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
@@ -62,8 +62,8 @@
 				<div class="container">
 					<div class="row no-gutters slider-text justify-content-center align-items-center">
 	          <div class="col-md-8 ftco-animate">
-	            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Blog</span></p>
-	            <h1 class="bread">Read Our Blog</h1>
+	            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">主页</a></span> <span>博客</span></p>
+	            <h1 class="bread">该文章标题</h1>
 	          </div>
 	        </div>
 				</div>
@@ -330,57 +330,57 @@
 	    		</div>
 	    	</div>
 	    </section>
-	    <footer class="ftco-footer ftco-bg-dark ftco-section">
-	      <div class="container px-md-5">
-	        <div class="row mb-5">
-	          <div class="col-md">
-	            <div class="ftco-footer-widget mb-4 ml-md-4">
-	              <h2 class="ftco-heading-2">Recent Photos</h2>
-	              <ul class="list-unstyled photo">
-	                <li><a href="#" class="img" style="background-image: url(images/image_1.jpg);"></a></li>
-	                <li><a href="#" class="img" style="background-image: url(images/image_2.jpg);"></a></li>
-	                <li><a href="#" class="img" style="background-image: url(images/image_3.jpg);"></a></li>
-	                <li><a href="#" class="img" style="background-image: url(images/image_4.jpg);"></a></li>
-	                <li><a href="#" class="img" style="background-image: url(images/image_5.jpg);"></a></li>
-	                <li><a href="#" class="img" style="background-image: url(images/image_6.jpg);"></a></li>
-	              </ul>
-	            </div>
-	          </div>
-	          <div class="col-md">
-	             <div class="ftco-footer-widget mb-4">
-	              <h2 class="ftco-heading-2">Archives</h2>
-	              <ul class="list-unstyled categories">
-	              	<li><a href="#">November 2018 <span>(105)</span></a></li>
-	              	<li><a href="#">Decob14 2018 <span>(212)</span></a></li>
-	                <li><a href="#">September 2018 <span>(150)</span></a></li>
-	                <li><a href="#">August 2018 <span>(100)</span></a></li>
-	                <li><a href="#">July 2018 <span>(200)</span></a></li>
-	              </ul>
-	            </div>
-	          </div>
-	          <div class="col-md">
-	            <div class="ftco-footer-widget mb-4">
-	            	<h2 class="ftco-heading-2">Have a Questions?</h2>
-	            	<div class="block-23 mb-3">
-		              <ul>
-		                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-		                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-		                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
-		              </ul>
-		            </div>
-	            </div>
-	          </div>
-	        </div>
-	        <div class="row">
-	          <div class="col-md-12">
+			<footer class="ftco-footer ftco-bg-dark ftco-section">
+				<div class="container px-md-5">
+					<div class="row mb-5">
+						<div class="col-md">
+							<div class="ftco-footer-widget mb-4 ml-md-4">
+								<h2 class="ftco-heading-2">最近照片</h2>
+								<ul class="list-unstyled photo">
+									<li><a href="#" class="img" style="background-image: url(images/image_1.jpg);"></a></li>
+									<li><a href="#" class="img" style="background-image: url(images/image_2.jpg);"></a></li>
+									<li><a href="#" class="img" style="background-image: url(images/image_3.jpg);"></a></li>
+									<li><a href="#" class="img" style="background-image: url(images/image_4.jpg);"></a></li>
+									<li><a href="#" class="img" style="background-image: url(images/image_5.jpg);"></a></li>
+									<li><a href="#" class="img" style="background-image: url(images/image_6.jpg);"></a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-md">
+							<div class="ftco-footer-widget mb-4">
+								<h2 class="ftco-heading-2">总访问量</h2>
+								<ul class="list-unstyled categories">
+									<li><a href="#">2024年     1月<span>(105)</span></a></li>
+									<li><a href="#">2023年     12月<span>(212)</span></a></li>
+									<li><a href="#">2023年    11月<span>(150)</span></a></li>
+									<li><a href="#">2023年    10月 <span>(100)</span></a></li>
+									<li><a href="#">2023年   9月 <span>(200)</span></a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-md">
+							<div class="ftco-footer-widget mb-4">
+								<h2 class="ftco-heading-2">俺的联系方式</h2>
+								<div class="block-23 mb-3">
+									<ul>
+										<li><span class="icon icon-map-marker"></span><span class="text">中国 江苏省 苏州市 昆山市 花桥镇</span></li>
+										<li><a href="#"><span class="icon icon-phone"></span><span class="text">13391254961</span></a></li>
+										<li><a href="#"><span class="icon icon-envelope"></span><span class="text">627389015@qq.com</span></a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
 
-	            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-	  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-	          </div>
-	        </div>
-	      </div>
-	    </footer>
+							<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								该博客 &copy;<script>document.write(new Date().getFullYear());</script> 年9月4日该博客正式进行开发 <i class="icon-heart" aria-hidden="true"></i> 还未 <a href="https://colorlib.com" target="_blank">正式上线</a>
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+						</div>
+					</div>
+				</div>
+			</footer>
 		</div><!-- END COLORLIB-MAIN -->
 	</div><!-- END COLORLIB-PAGE -->
 
@@ -402,7 +402,9 @@
   <script src="js/bootstrap-datepicker.js"></script>
   <script src="js/jquery.timepicker.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+<!--	这里不能外面链接-->
+<!--  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>-->
+  <script src="js/maps-api.js"></script>
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
     
