--- a/zg-blog-front/src/main/resources/static/blog.html
+++ b/zg-blog-front/src/main/resources/static/blog.html
@@ -93,7 +93,7 @@
 										<li><a href="#">&lt;</a></li>
 										<li th:each="n : ${#numbers.sequence(1, pageVo.pages)}"
 											th:classappend="${n == pageVo.currentPage} ? 'active' : ''">
-											<a th:href="@{'blog?pageNum='+${n}}">
+											<a th:href="@{'blog?pageNum='+${n} + '&&likeTitle='+${pageVo.likeTitle}} ">
 												<span th:text="${n}">
 												</span>
 											</a>
@@ -106,70 +106,40 @@
 					</div>
 					<div class="col-lg-4 sidebar ftco-animate bg-light">
 						<div class="sidebar-box">
-							<form action="#" class="search-form">
+							<form th:action="@{'blog?'+'&&likeTitle='+${pageVo.likeTitle}}" class="search-form">
 								<div class="form-group">
-									<span class="icon icon-search"></span>
-									<input type="text" class="form-control" placeholder="Type a keyword and hit enter">
+									<button class="icon icon-search" type="submit"></button>
+									<input type="text" class="form-control" placeholder="搜索文章" name="likeTitle">
 								</div>
 							</form>
 						</div>
 						<div class="sidebar-box ftco-animate">
-							<h3 class="sidebar-heading">Categories</h3>
+							<h3 class="sidebar-heading">文章类型</h3>
 							<ul class="categories">
-								<li><a href="#">Fashion <span>(6)</span></a></li>
-								<li><a href="#">Technology <span>(8)</span></a></li>
-								<li><a href="#">Travel <span>(2)</span></a></li>
-								<li><a href="#">Food <span>(2)</span></a></li>
-								<li><a href="#">Photography <span>(7)</span></a></li>
+								<li th:each="articleTypeVo : ${articleTypeVos}" style="display: flex;justify-content: space-between">
+										<a href="#" th:text="${articleTypeVo.articleTypeName}" style="display: inline-block;"></a>
+										<span th:text="'('+ ${articleTypeVo.articleNum} + ')' " style="display: inline-block;"></span>
+								</li>
 							</ul>
 						</div>
 						<div class="sidebar-box ftco-animate">
-							<h3 class="sidebar-heading">Popular Articles</h3>
-							<div class="block-21 mb-4 d-flex">
-								<a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+							<h3 class="sidebar-heading">热门文章</h3>
+							<div class="block-21 mb-4 d-flex" th:each="popularArticleVo : ${popularArticleVos}">
+								<a class="blog-img mr-4" th:style="'background-image: url('+${popularArticleVo.articleImg} +')'"></a>
 								<div class="text">
-									<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control</a></h3>
+									<h3 class="heading"><a th:href="@{'blog/singleBlog?id='+${popularArticleVo.id}}" th:text="${popularArticleVo.title}"></a></h3>
 									<div class="meta">
-										<div><a href="#"><span class="icon-calendar"></span> Dec. 14, 2018</a></div>
-										<div><a href="#"><span class="icon-person"></span> Dave Lewis</a></div>
-										<div><a href="#"><span class="icon-chat"></span> 19</a></div>
-									</div>
-								</div>
-							</div>
-							<div class="block-21 mb-4 d-flex">
-								<a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
-								<div class="text">
-									<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control</a></h3>
-									<div class="meta">
-										<div><a href="#"><span class="icon-calendar"></span> Dec. 14, 2018</a></div>
-										<div><a href="#"><span class="icon-person"></span> Dave Lewis</a></div>
-										<div><a href="#"><span class="icon-chat"></span> 19</a></div>
-									</div>
-								</div>
-							</div>
-							<div class="block-21 mb-4 d-flex">
-								<a class="blog-img mr-4" style="background-image: url(images/image_3.jpg);"></a>
-								<div class="text">
-									<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control</a></h3>
-									<div class="meta">
-										<div><a href="#"><span class="icon-calendar"></span> Dec. 14, 2018</a></div>
-										<div><a href="#"><span class="icon-person"></span> Dave Lewis</a></div>
-										<div><a href="#"><span class="icon-chat"></span> 19</a></div>
+										<div><span class="icon-calendar" th:text="${popularArticleVo.created}"></span></div>
+										<div ><span class="icon-person">曾智奇</span></div>
+										<div><span class="icon-chat" th:text="${popularArticleVo.comments}"></span></div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="sidebar-box ftco-animate">
-							<h3 class="sidebar-heading">Tag Cloud</h3>
+							<h3 class="sidebar-heading">标签</h3>
 							<ul class="tagcloud">
-								<a href="#" class="tag-cloud-link">animals</a>
-								<a href="#" class="tag-cloud-link">human</a>
-								<a href="#" class="tag-cloud-link">people</a>
-								<a href="#" class="tag-cloud-link">cat</a>
-								<a href="#" class="tag-cloud-link">dog</a>
-								<a href="#" class="tag-cloud-link">nature</a>
-								<a href="#" class="tag-cloud-link">leaves</a>
-								<a href="#" class="tag-cloud-link">food</a>
+								<a href="#" class="tag-cloud-link" th:each="tagsVo : ${tagsVos}" th:text="${tagsVo.tagsName}"></a>
 							</ul>
 						</div>
 
@@ -177,7 +147,7 @@
 							<div class="overlay"></div>
 							<h3 class="mb-4 sidebar-heading">Newsletter</h3>
 							<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia</p>
-							<form action="#" class="subscribe-form">
+							<form th:action="@{'blog?'+'&&likeTitle='+${pageVo.likeTitle}}" class="subscribe-form">
 								<div class="form-group">
 									<input type="text" class="form-control" placeholder="Email Address">
 									<input type="submit" value="Subscribe" class="mt-2 btn btn-white submit">
