--- a/zg-blog-front/src/main/resources/static/blog.html
+++ b/zg-blog-front/src/main/resources/static/blog.html
@@ -139,17 +139,17 @@
 						<div class="sidebar-box ftco-animate">
 							<h3 class="sidebar-heading">标签</h3>
 							<ul class="tagcloud">
-								<a href="#" class="tag-cloud-link" th:each="tagsVo : ${tagsVos}" th:text="${tagsVo.tagsName}"></a>
+								<a  class="tag-cloud-link" th:each="tagsVo : ${tagsVos}" th:text="${tagsVo.tagsName}"></a>
 							</ul>
 						</div>
 
 						<div class="sidebar-box subs-wrap img" style="background-image: url(images/bg_1.jpg);">
 							<div class="overlay"></div>
-							<h3 class="mb-4 sidebar-heading">Newsletter</h3>
-							<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia</p>
-							<form th:action="@{'blog?'+'&&likeTitle='+${pageVo.likeTitle}}" class="subscribe-form">
+							<h3 class="mb-4 sidebar-heading">新闻</h3>
+							<p class="mb-4" th:text="${emailMessage}"></p>
+							<form th:action="@{'blog'}" class="subscribe-form">
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Email Address">
+									<input type="text" class="form-control" placeholder="Email Address" name="email">
 									<input type="submit" value="Subscribe" class="mt-2 btn btn-white submit">
 								</div>
 							</form>
