--- a/zg-blog-front/src/main/resources/static/single.html
+++ b/zg-blog-front/src/main/resources/static/single.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:v-bind="http://www.w3.org/1999/xhtml">
   <head th:include="blog :: head">
   </head>
   <body>
@@ -7,7 +7,7 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
-			<h1 id="colorlib-logo"><a href="index.html"><span class="img" style="background-image: url(images/author.jpg);"></span>Louie Smith</a></h1>
+			<h1 id="colorlib-logo"><a href="index.html"><span class="img" style="background-image: url(/images/home1.jpg);"></span>Louie Smith</a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -31,210 +31,156 @@
 				</div>
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
-		<div id="colorlib-main">
-			<section class="ftco-section ftco-bread">
-				<div class="container">
-					<div class="row no-gutters slider-text justify-content-center align-items-center">
-	          <div class="col-md-8 ftco-animate">
-	            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span class="mr-2"><a href="blog.html">Blog</a></span> <span>Blog Single</span></p>
-	            <h1 class="bread">Blog Single</h1>
-	          </div>
-	        </div>
-				</div>
-			</section>
-			<section class="ftco-section">
-	    	<div class="container">
-	    		<div class="row">
-	    			<div class="col-lg-8 ftco-animate">
-	            <h2 class="mb-3 font-weight-bold" th:text="${singleArticleTagsVo.title}"></h2>
-						<div th:utext="${singleArticleTagsVo.content}">
+        <div id="app">
+			<div id="colorlib-main">
+				<section class="ftco-section ftco-bread">
+					<div class="container">
+						<div class="row no-gutters slider-text justify-content-center align-items-center">
+							<div class="col-md-8 ftco-animate">
+								<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span class="mr-2"><a href="blog.html">Blog</a></span> <span>Blog Single</span></p>
+								<h1 class="bread">Blog Single</h1>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="ftco-section">
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-8 ftco-animate">
+								<h2 class="mb-3 font-weight-bold" th:text="${singleArticleTagsVo.title}"></h2>
+								<div th:utext="${singleArticleTagsVo.content}">
+
+								</div>
+								<div class="tag-widget post-tag-container mb-5 mt-5">
+									<div class="tagcloud">
+										<a class="tag-cloud-link" th:each="tags : ${singleArticleTagsVo.tagsList}" th:text="${tags.tagsName}"></a>
+									</div>
+								</div>
+
+								<div class="about-author d-flex p-4 bg-light">
+									<div class="bio mr-5">
+										<img  th:src="${authorComment.avatar} " alt="Image placeholder" class="img-fluid mb-4">
+									</div>
+									<div class="desc">
+										<h3 th:text="${authorComment.name}"></h3>
+										<p th:text="${authorComment.content}"></p>
+									</div>
+								</div>
+
+
+								<div class="pt-5 mt-5">
+									<h3 class="mb-5 font-weight-bold">6 Comments</h3>
+
+
+										<ul class="comment-list" >
+											<th:block th:fragment="generateComments(commentVos)">
+											<li class="comment" th:each="commentVo : ${commentVos}">
+												<div class="vcard bio">
+													<img th:src="${commentVo.avatar}" alt="Image placeholder">
+												</div>
+												<div class="comment-body">
+													<h3 th:text="${commentVo.name}"></h3>
+													<div class="meta" th:text="${commentVo.created}"></div>
+													<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+													<p><a href="#" class="reply">Reply</a></p>
+												</div>
+												<ul class="children"  th:if="${#lists.size(commentVo.commentsVoList)} > 0">
+
+														<th:block th:include="this :: generateComments(${commentVo.commentsVoList})"></th:block>
+
+												</ul>
+											</li>
+											</th:block>
+										</ul>
+
+									<!-- END comment-list -->
+
+									<div class="comment-form-wrap pt-5">
+										<h3 class="mb-5">Leave a comment</h3>
+										<form action="#" class="p-3 p-md-5 bg-light">
+											<div class="form-group">
+												<label for="name">Name *</label>
+												<input type="text" class="form-control" id="name">
+											</div>
+											<div class="form-group">
+												<label for="email">Email *</label>
+												<input type="email" class="form-control" id="email">
+											</div>
+											<div class="form-group">
+												<label for="website">Website</label>
+												<input type="url" class="form-control" id="website">
+											</div>
+
+											<div class="form-group">
+												<label for="message">Message</label>
+												<textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea>
+											</div>
+											<div class="form-group">
+												<input type="submit" value="Post Comment" class="btn py-3 px-4 btn-primary">
+											</div>
+
+										</form>
+									</div>
+								</div>
+							</div> <!-- .col-md-8 -->
 
 						</div>
-	            <div class="tag-widget post-tag-container mb-5 mt-5">
-	              <div class="tagcloud">
-	                <a class="tag-cloud-link" th:each="tags : ${singleArticleTagsVo.tagsList}" th:text="${tags.tagsName}"></a>
-	              </div>
-	            </div>
-	            
-	            <div class="about-author d-flex p-4 bg-light">
-	              <div class="bio mr-5">
-	                <img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid mb-4">
-	              </div>
-	              <div class="desc">
-	                <h3>George Washington</h3>
-	                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
-	              </div>
-	            </div>
+					</div>
+				</section>
+				<footer class="ftco-footer ftco-bg-dark ftco-section">
+					<div class="container px-md-5">
+						<div class="row mb-5">
+							<div class="col-md">
+								<div class="ftco-footer-widget mb-4 ml-md-4">
+									<h2 class="ftco-heading-2">Recent Photos</h2>
+									<ul class="list-unstyled photo">
+										<li><a href="#" class="img" style="background-image: url(images/image_1.jpg);"></a></li>
+										<li><a href="#" class="img" style="background-image: url(images/image_2.jpg);"></a></li>
+										<li><a href="#" class="img" style="background-image: url(images/image_3.jpg);"></a></li>
+										<li><a href="#" class="img" style="background-image: url(images/image_4.jpg);"></a></li>
+										<li><a href="#" class="img" style="background-image: url(images/image_5.jpg);"></a></li>
+										<li><a href="#" class="img" style="background-image: url(images/image_6.jpg);"></a></li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-md">
+								<div class="ftco-footer-widget mb-4">
+									<h2 class="ftco-heading-2">Archives</h2>
+									<ul class="list-unstyled categories">
+										<li><a href="#">November 2018 <span>(105)</span></a></li>
+										<li><a href="#">October 2018 <span>(212)</span></a></li>
+										<li><a href="#">September 2018 <span>(150)</span></a></li>
+										<li><a href="#">August 2018 <span>(100)</span></a></li>
+										<li><a href="#">July 2018 <span>(200)</span></a></li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-md">
+								<div class="ftco-footer-widget mb-4">
+									<h2 class="ftco-heading-2">Have a Questions?</h2>
+									<div class="block-23 mb-3">
+										<ul>
+											<li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+											<li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+											<li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
 
+								<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+									Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+									<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+							</div>
+						</div>
+					</div>
+				</footer>
+			</div><!-- END COLORLIB-MAIN -->
+		</div>
 
-	            <div class="pt-5 mt-5">
-	              <h3 class="mb-5 font-weight-bold">6 Comments</h3>
-	              <ul class="comment-list">
-	                <li class="comment">
-	                  <div class="vcard bio">
-	                    <img src="images/person_1.jpg" alt="Image placeholder">
-	                  </div>
-	                  <div class="comment-body">
-	                    <h3>John Doe</h3>
-	                    <div class="meta">October 03, 2018 at 2:21pm</div>
-	                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-	                    <p><a href="#" class="reply">Reply</a></p>
-	                  </div>
-	                </li>
-
-	                <li class="comment">
-	                  <div class="vcard bio">
-	                    <img src="images/person_1.jpg" alt="Image placeholder">
-	                  </div>
-	                  <div class="comment-body">
-	                    <h3>John Doe</h3>
-	                    <div class="meta">October 03, 2018 at 2:21pm</div>
-	                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-	                    <p><a href="#" class="reply">Reply</a></p>
-	                  </div>
-
-	                  <ul class="children">
-	                    <li class="comment">
-	                      <div class="vcard bio">
-	                        <img src="images/person_1.jpg" alt="Image placeholder">
-	                      </div>
-	                      <div class="comment-body">
-	                        <h3>John Doe</h3>
-	                        <div class="meta">October 03, 2018 at 2:21pm</div>
-	                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-	                        <p><a href="#" class="reply">Reply</a></p>
-	                      </div>
-
-
-	                      <ul class="children">
-	                        <li class="comment">
-	                          <div class="vcard bio">
-	                            <img src="images/person_1.jpg" alt="Image placeholder">
-	                          </div>
-	                          <div class="comment-body">
-	                            <h3>John Doe</h3>
-	                            <div class="meta">October 03, 2018 at 2:21pm</div>
-	                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-	                            <p><a href="#" class="reply">Reply</a></p>
-	                          </div>
-
-	                            <ul class="children">
-	                              <li class="comment">
-	                                <div class="vcard bio">
-	                                  <img src="images/person_1.jpg" alt="Image placeholder">
-	                                </div>
-	                                <div class="comment-body">
-	                                  <h3>John Doe</h3>
-	                                  <div class="meta">October 03, 2018 at 2:21pm</div>
-	                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-	                                  <p><a href="#" class="reply">Reply</a></p>
-	                                </div>
-	                              </li>
-	                            </ul>
-	                        </li>
-	                      </ul>
-	                    </li>
-	                  </ul>
-	                </li>
-
-	                <li class="comment">
-	                  <div class="vcard bio">
-	                    <img src="images/person_1.jpg" alt="Image placeholder">
-	                  </div>
-	                  <div class="comment-body">
-	                    <h3>John Doe</h3>
-	                    <div class="meta">October 03, 2018 at 2:21pm</div>
-	                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-	                    <p><a href="#" class="reply">Reply</a></p>
-	                  </div>
-	                </li>
-	              </ul>
-	              <!-- END comment-list -->
-	              
-	              <div class="comment-form-wrap pt-5">
-	                <h3 class="mb-5">Leave a comment</h3>
-	                <form action="#" class="p-3 p-md-5 bg-light">
-	                  <div class="form-group">
-	                    <label for="name">Name *</label>
-	                    <input type="text" class="form-control" id="name">
-	                  </div>
-	                  <div class="form-group">
-	                    <label for="email">Email *</label>
-	                    <input type="email" class="form-control" id="email">
-	                  </div>
-	                  <div class="form-group">
-	                    <label for="website">Website</label>
-	                    <input type="url" class="form-control" id="website">
-	                  </div>
-
-	                  <div class="form-group">
-	                    <label for="message">Message</label>
-	                    <textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea>
-	                  </div>
-	                  <div class="form-group">
-	                    <input type="submit" value="Post Comment" class="btn py-3 px-4 btn-primary">
-	                  </div>
-
-	                </form>
-	              </div>
-	            </div>
-	          </div> <!-- .col-md-8 -->
-
-	    		</div>
-	    	</div>
-	    </section>
-	    <footer class="ftco-footer ftco-bg-dark ftco-section">
-	      <div class="container px-md-5">
-	        <div class="row mb-5">
-	          <div class="col-md">
-	            <div class="ftco-footer-widget mb-4 ml-md-4">
-	              <h2 class="ftco-heading-2">Recent Photos</h2>
-	              <ul class="list-unstyled photo">
-	                <li><a href="#" class="img" style="background-image: url(images/image_1.jpg);"></a></li>
-	                <li><a href="#" class="img" style="background-image: url(images/image_2.jpg);"></a></li>
-	                <li><a href="#" class="img" style="background-image: url(images/image_3.jpg);"></a></li>
-	                <li><a href="#" class="img" style="background-image: url(images/image_4.jpg);"></a></li>
-	                <li><a href="#" class="img" style="background-image: url(images/image_5.jpg);"></a></li>
-	                <li><a href="#" class="img" style="background-image: url(images/image_6.jpg);"></a></li>
-	              </ul>
-	            </div>
-	          </div>
-	          <div class="col-md">
-	             <div class="ftco-footer-widget mb-4">
-	              <h2 class="ftco-heading-2">Archives</h2>
-	              <ul class="list-unstyled categories">
-	              	<li><a href="#">November 2018 <span>(105)</span></a></li>
-	              	<li><a href="#">October 2018 <span>(212)</span></a></li>
-	                <li><a href="#">September 2018 <span>(150)</span></a></li>
-	                <li><a href="#">August 2018 <span>(100)</span></a></li>
-	                <li><a href="#">July 2018 <span>(200)</span></a></li>
-	              </ul>
-	            </div>
-	          </div>
-	          <div class="col-md">
-	            <div class="ftco-footer-widget mb-4">
-	            	<h2 class="ftco-heading-2">Have a Questions?</h2>
-	            	<div class="block-23 mb-3">
-		              <ul>
-		                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-		                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-		                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
-		              </ul>
-		            </div>
-	            </div>
-	          </div>
-	        </div>
-	        <div class="row">
-	          <div class="col-md-12">
-
-	            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-	  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-	          </div>
-	        </div>
-	      </div>
-	    </footer>
-		</div><!-- END COLORLIB-MAIN -->
 	</div><!-- END COLORLIB-PAGE -->
 
   <!-- loader -->
@@ -259,5 +205,6 @@
 	<script th:src="@{/js/maps-api.js}"></script>
 	<script th:src="@{/js/google-map.js}"></script>
 	<script th:src="@{/js/main.js}"></script>
+	<script th:src="@{https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js}"></script>
   </body>
 </html>
